# Billing-System

./: .gitignore  CMakeLists.txt  GrocifyBilling.pro  README.md  addproduct.cpp  addproduct.h  addproduct.h(2).h  addproduct.ui  billingscreen.cpp  billingscreen.h  billingscreen.ui  login.c  login.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.c  main.cpp  mainmenu.ui  mainwindow.cpp  mainwindow.h  menu.cpp  menu.h  menuwindow.cpp  menuwindow.h  menuwindow.ui  product.c  product.h  receiptscreen.cpp  receiptscreen.h  receiptscreen.ui
